Fix navabar align items

--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -29,6 +29,10 @@
     text-decoration: none;
 }
 
+.OptionsContainer ul {
+    margin: 0;
+}
+
 .OptionsContainer li{
     position: relative;
     float: left;
@@ -205,7 +209,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        align-items: flex-start;
+        /* align-items: flex-start; */
         width: 100%;
     }
 
